--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,27 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
     android:paddingTop="20dp"
     android:paddingBottom="20dp"
     android:background="@color/colorPrimary"
     android:layout_width="match_parent"
     android:layout_height="190dp">
 
+    <View
+        android:layout_width="0dp"
+        android:layout_weight="0.2"
+        android:layout_height="match_parent"/>
+
     <de.hdodenhof.circleimageview.CircleImageView
         tools:src="@drawable/ic_person"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_gravity="center"
         android:id="@+id/image"
         android:layout_weight="1"
-        android:layout_height="0dp" />
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_weight="2"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="vertical">
 
     <TextView
         android:id="@+id/name"
         android:textColor="@color/white"
         android:textSize="18sp"
+        android:text="name"
+        android:gravity="center"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/id"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:text="ID : "
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 
 </LinearLayout>
