--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,47 +2,52 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:paddingTop="20dp"
-    android:paddingBottom="20dp"
     android:background="@color/colorPrimary"
     android:layout_width="match_parent"
-    android:layout_height="190dp">
+    android:layout_height="230dp">
 
     <View
-        android:layout_width="0dp"
-        android:layout_weight="0.2"
-        android:layout_height="match_parent"/>
+        android:layout_width="match_parent"
+        android:layout_weight="0.4"
+        android:layout_height="0dp"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
         tools:src="@drawable/ic_person"
-        android:layout_width="0dp"
+        android:layout_width="120dp"
         android:layout_gravity="center"
         android:id="@+id/image"
-        android:layout_weight="1"
-        android:layout_height="wrap_content" />
+        android:layout_weight="1.5"
+        android:layout_height="0dp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_weight="0.2"
+        android:layout_height="0dp"/>
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_weight="2"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="0dp"
         android:layout_gravity="center"
         android:orientation="vertical">
 
-    <TextView
+    <customfonts.MyTextView
         android:id="@+id/name"
         android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:text="name"
+        android:textAllCaps="true"
         android:gravity="center"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-        <TextView
+        <customfonts.MyTextView
             android:id="@+id/id"
             android:textColor="@color/white"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:text="ID : "
             android:gravity="center"
             android:layout_gravity="center"
